--- a/settings.json
+++ b/settings.json
@@ -95,7 +95,7 @@
 
   /* This is the absolute path to the soffice executable. Setting it to null, disables LibreOffice exporting.
      LibreOffice can be used in lieu of Abiword to export pads */
-  "soffice" : null,
+  "soffice" : "/usr/bin/soffice",
 
   /* This is the path to the Tidy executable. Setting it to null, disables Tidy.
      Tidy is used to improve the quality of exported pads*/
