bug fix in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   etherpad:
     build: 
       context: .
-      args:cat 
+      args:
         # proxy for npm & curl
         proxy: ${http_proxy}
     image: rhanka/etherpad
